fixed the z-index

--- a/styles/style.css
+++ b/styles/style.css
@@ -86,6 +86,7 @@ body *:focus {
     border-radius: 50% !important;
     background: #5956E9 !important;
     padding: 10px 15px;
+    z-index: 10;
 }
 /* ------------------------------------- Header ------------------------------------- */
 #main-header{
@@ -190,6 +191,7 @@ input{
         border-radius: 50% !important;
         background: #5956E9 !important;
         padding: 10px 15px;
+        z-index: 10;
     }
     .normal-heading{
         font-size: 40px !important;
@@ -233,5 +235,6 @@ input{
         border-radius: 50% !important;
         background: #5956E9 !important;
         padding: 10px 15px;
+        z-index: 10;
     }
 }
